git-annex (0.20110426) UNRELEASED; urgency=low

  * Switch back to haskell SHA library, so git-annex remains buildable on
    Debian stable.

 -- Joey Hess <joeyh@debian.org>  Tue, 26 Apr 2011 11:23:54 -0400

git-annex (0.20110425) unstable; urgency=low

  * Use haskell Crypto library instead of haskell SHA library.
  * Remove testpack from build depends for non x86 architectures where it
    is not available. The test suite will not be run if it cannot be compiled.
  * Avoid using absolute paths when staging location log, as that can
    confuse git when a remote's path contains a symlink. Closes: #621386

 -- Joey Hess <joeyh@debian.org>  Mon, 25 Apr 2011 15:47:00 -0400

git-annex (0.20110420) unstable; urgency=low

  * Update Debian build dependencies for ghc 7.
  * Debian package is now built with S3 support.
    Thanks Joachim Breitner for making this possible.
  * Somewhat improved memory usage of S3, still work to do.
    Thanks Greg Heartsfield for ongoing work to improve the hS3 library
    for git-annex.

 -- Joey Hess <joeyh@debian.org>  Thu, 21 Apr 2011 15:00:48 -0400

git-annex (0.20110419) unstable; urgency=low

  * Don't run gpg in batch mode, so it can prompt for passphrase when
    there is no agent.
  * Add missing build dep on dataenc.
  * S3: Fix stalls when transferring encrypted data.
  * bup: Avoid memory leak when transferring encrypted data.

 -- Joey Hess <joeyh@debian.org>  Tue, 19 Apr 2011 21:26:51 -0400

git-annex (0.20110417) unstable; urgency=low

  * bup is now supported as a special type of remote.
  * The data sent to special remotes (Amazon S3, bup, etc) can be encrypted
    using GPG for privacy.
  * Use lowercase hash directories for locationlog files, to avoid
    some issues with git on OSX with the mixed-case directories.
    No migration is needed; the old mixed case hash directories are still
    read; new information is written to the new directories.
  * Unused files on remotes, particulary special remotes, can now be