@@ -48,6 +48,7 @@ import qualified Remote.Git
 import qualified Remote.S3
 import qualified Remote.Bup
 import qualified Remote.Directory
+import qualified Remote.Rsync
 
 remoteTypes :: [RemoteType Annex]
 remoteTypes =
@@ -55,6 +56,7 @@ remoteTypes =
 	, Remote.S3.remote
 	, Remote.Bup.remote
 	, Remote.Directory.remote
+	, Remote.Rsync.remote
 	]
 
 {- Builds a list of all available Remotes.
